worked on supervisor assessment page

--- a/src/Student_Assessment.html
+++ b/src/Student_Assessment.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/student_assessment.css">
     <script src="https://kit.fontawesome.com/3d7a902bb5.js" crossorigin="anonymous"></script>
 
-    <title>Goals</title>
+    <title>Assessment</title>
 </head>
 <body>
     <div class="nav-bar">
@@ -39,7 +39,7 @@
         <div class="container__assessment">
             <h1 class="content-title">Assessment</h1>
 
-            
+            <hr>
         </div>
     </div>
 </body>
