--- a/src/login_register.html
+++ b/src/login_register.html
@@ -46,7 +46,7 @@
         </form>
 
         <form action="" class="form form--hidden"  id="register">
-            <h3 class="form__title">Sign Up</h3>
+            <h3 class="form__title form__title--register">Sign Up</h3>
             <div class="form__message form__message--error"><!--Incorrect username/password combination --></div>
             
             <div class="form__input-group">
