worked on student assessment page

--- a/src/Student_Assessment.html
+++ b/src/Student_Assessment.html
@@ -40,6 +40,53 @@
             <h1 class="content-title">Assessment</h1>
 
             <hr>
+            <div class="container__marksheet">
+                <div>
+                    <h3 class="title">Marksheet</h3>
+                </div>
+                <div class="details">
+                    <p>Name: Sam</p>
+                    <p>Project Title: Something2</p> 
+                </div>
+                <div class="container__table">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Criteria</th>
+                                <th>Max Mark</th>
+                                <th>Mark</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="criteria">Criteria A</td>
+                                <td>25</td>
+                                <td>score..</td>
+                            </tr>
+                            <tr>
+                                <td class="criteria">Criteria B</td>
+                                <td>25</td>
+                                <td>score..</td>
+                            </tr>
+                            <tr>
+                                <td class="criteria">Criteria C</td>
+                                <td>25</td>
+                                <td>score..</td>
+                            </tr>
+                            <tr>
+                                <td class="criteria">Criteria D</td>
+                                <td>25</td>
+                                <td>score..</td>
+                            </tr>
+                            <tr class="total">
+                                <td class="total-td">Total</td>
+                                <td>100</td>
+                                <td>score..</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </body>
